--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -40,9 +40,9 @@
    "metadata": {},
    "source": [
     "Utilizzeremo i seguenti dati:\n",
-    "1. Parchi\n",
-    "2. impianti sportivi\n",
-    "3. aree gioco\n",
+    "1. **Parchi**\n",
+    "2. **Impianti sportivi**\n",
+    "3. **Aree gioco**\n",
     "Saranno i nostri \"poi\", cioè \"Point of Interest\" che verranno aggiunti al Grafo della rete Ciclabile/Stradale per la ricerca di percorsi"
    ]
   },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "b27ac11f",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "054f3bd0",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "413f2266",
    "metadata": {},
    "outputs": [],
@@ -117,19 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "32a9ee68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_impianti_sportivi = gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN)\n",
-    "Graph_functions._explode_gdf_with_MultiPolygon_to_Polygon(gdf_impianti_sportivi)\n",
-    "gdf_impianti_sportivi.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "aa482998",
    "metadata": {},
    "outputs": [],
@@ -137,6 +125,28 @@
     "gdf_impianti_sportivi = gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN)\n",
     "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_impianti_sportivi,\n",
     "                                                                     tipo = \"impianti sportivi\",\n",
+    "                                                                     poi = True,\n",
+    "                                                                     artificial=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daf14c81",
+   "metadata": {},
+   "source": [
+    "### Aggiunta di **Aree gioco** come **\"poi\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "236a1e6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_aree_gioco = gpd.read_file(PATH_AREE_GIOCO_CLEAN)\n",
+    "G_compose = Graph_functions.connect_poi_nodes_to_graph(G_compose, gdf_aree_gioco,\n",
+    "                                                                     tipo = \"aree gioco\",\n",
     "                                                                     poi = True,\n",
     "                                                                     artificial=True)"
    ]
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "4fc6c2e1",
    "metadata": {},
    "outputs": [],
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "b5b49bec",
    "metadata": {},
    "outputs": [],
@@ -195,23 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "302967c8",
+   "execution_count": null,
+   "id": "e5a5cc3a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "528"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(gdf_steiner[gdf_steiner[\"tipo\"] == \"impianti sportivi\"])"
+    "gdf_steiner[\"tipo\"]"
    ]
   }
  ],
