--- a/Scripts/Rete_ciclabile_stradale.ipynb
+++ b/Scripts/Rete_ciclabile_stradale.ipynb
@@ -24,7 +24,9 @@
     "import networkx as nx\n",
     "\n",
     "from my_paths import *\n",
-    "import Graph_functions"
+    "import Graph_functions\n",
+    "\n",
+    "from networkx.classes.reportviews import OutMultiEdgeView"
    ]
   },
   {
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "49d9dc03",
    "metadata": {},
    "outputs": [],
@@ -171,7 +173,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
+   "id": "65d95026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcola_peso_strada(highway) -> float:\n",
+    "    custom_weights = {\n",
+    "        \"motorway\": 99,\n",
+    "        \"trunk\": 99,\n",
+    "        \"primary\": 1.2,\n",
+    "        \"secondary\": 1.1,\n",
+    "        \"tertiary\": 1.25,\n",
+    "        \"residential\": 1.3,\n",
+    "        \"unclassified\": 1.3,\n",
+    "        \"living_street\": 1.3,\n",
+    "        \"motorway_link\": 99,\n",
+    "        \"trunk_link\": 99,\n",
+    "        \"primary_link\": 1.2,\n",
+    "        \"secondary_link\": 1.1,\n",
+    "        \"tertiary_link\": 1.25,\n",
+    "        \"service\": 99,\n",
+    "        \"footway\": 1.2,\n",
+    "        \"pedestrian\": 1.5,\n",
+    "        \"steps\": 99,\n",
+    "        \"platform\": 99,\n",
+    "        \"path\": 1.1,\n",
+    "        \"cycleway\": 1,\n",
+    "        \"track\": 1,\n",
+    "        \"bridleway\": 1.6,\n",
+    "        \"construction\": 99,\n",
+    "        \"proposed\": 99,\n",
+    "        \"demolished\": 99,\n",
+    "        \"busway\": 99,\n",
+    "        \"bus_stop\": 99,\n",
+    "        \"corridor\": 99,\n",
+    "        \"services\": 99,\n",
+    "        \"emergency_bay\": 99\n",
+    "    }\n",
+    "    if isinstance(highway, str):\n",
+    "        highway = [highway]\n",
+    "    max_weight = 99\n",
+    "    for h in highway:\n",
+    "        new_weight = custom_weights.get(h, 99)\n",
+    "        if new_weight < max_weight:\n",
+    "            max_weight = new_weight\n",
+    "    return max_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ae1289aa",
    "metadata": {},
    "outputs": [],
@@ -179,22 +231,19 @@
     "with open(PATH_STRADE_CICLABILI_PICKLE_RAW, \"rb\") as f:\n",
     "    G_strade = pickle.load(f)\n",
     "\n",
+    "G_strade:nx.MultiDiGraph\n",
     "for u, v, k, data in G_strade.edges(data=True, keys=True):\n",
     "    # Scelgo gli attributi da mantenere\n",
-    "    new_data = {}\n",
-    "    new_data['length'] = data['length']\n",
-    "    new_data['name'] = data.get('name', None)\n",
-    "    new_data['weight'] = data['length'] * 1 # Per ora\n",
-    "    new_data[\"tipo\"] = \"Strade_ciclabili\"\n",
-    "    new_data[\"artificiale\"] = False\n",
-    "    new_data[\"geometry\"] = data.get(\"geometry\", LineString([(G_strade.nodes[u][\"x\"], G_strade.nodes[u][\"y\"]),\n",
+    "    G_strade[u][v][k]['length'] = data['length']\n",
+    "    G_strade[u][v][k]['name'] = data.get('name', None)\n",
+    "    G_strade[u][v][k]['highway'] = data[\"highway\"]\n",
+    "    G_strade[u][v][k]['weight'] = data['length'] * calcola_peso_strada(data[\"highway\"]) # Per ora\n",
+    "    G_strade[u][v][k][\"tipo\"] = \"Strade_ciclabili\"\n",
+    "    G_strade[u][v][k][\"artificiale\"] = False\n",
+    "    G_strade[u][v][k][\"geometry\"] = data.get(\"geometry\", LineString([(G_strade.nodes[u][\"x\"], G_strade.nodes[u][\"y\"]),\n",
     "                                        (G_strade.nodes[v][\"x\"], G_strade.nodes[v][\"y\"])]))\n",
-    "    data.clear()\n",
-    "    data.update(new_data)\n",
     "\n",
-    "G_strade = Graph_functions.add_edge_near_nodes(G_strade.to_undirected(), # undirected -> Doppio senso\n",
-    "                                               weight_moltiplicator=1,  # Per ora\n",
-    "                                               tipo = \"Strade_ciclabili\", artificiale = True)"
+    "G_strade = G_strade.to_undirected()"
    ]
   },
   {
@@ -207,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "832886fa",
    "metadata": {},
    "outputs": [],
@@ -240,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "05c4ae6e",
    "metadata": {},
    "outputs": [],
@@ -266,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "5761f53c",
    "metadata": {},
    "outputs": [],
@@ -280,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "37cd9e16",
    "metadata": {},
    "outputs": [],
