update git script

--- a/Scripts/Git.ipynb
+++ b/Scripts/Git.ipynb
@@ -207,7 +207,7 @@
    "id": "d2a9309e",
    "metadata": {},
    "source": [
-    "# Tenta la correzzione automatica **prima del disastro**"
+    "## Tenta la correzzione automatica **prima del disastro**"
    ]
   },
   {
