big fix unione stra_cicla

--- a/Scripts/Git.ipynb
+++ b/Scripts/Git.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "4a52f08b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "id": "089b30ae",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "id": "5cbb2c3a",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "id": "e9b56dcc",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "True"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,12 +220,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 162,
    "id": "b2c3ce51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "<>:2: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\aless\\AppData\\Local\\Temp\\ipykernel_27640\\2423587667.py:2: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
    "source": [
     "def append_to_gitignore_if_needed(path: str, gitignore_path: str):\n",
+    "    \"\"\"\n",
+    "    ../Data\\Clean\\Rete_ciclabile_stradale\\rete_ciclabile_completa.geojson\n",
+    "    \"\"\"\n",
+    "    path = path.replace(\"\\\\\", \"/\").strip(\".\").strip(\"/\")\n",
     "    try:\n",
     "        with open(gitignore_path, \"r\") as f:\n",
     "            lines = f.read().splitlines()\n",
@@ -247,10 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "id": "3c41536c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['git', 'commit', '-m', 'Fix: removed >100MB files from tracking and updated .gitignore'], returncode=0)"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "repo_root = _get_git_repo_root(\"./\")\n",
     "for big_file in big_files:\n",
