--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -27,6 +27,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a02fd825",
+   "metadata": {},
+   "source": [
+    "## Stazioni BikeMi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e3b2165",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver CSV does not support open option SEP\n",
+      "  return ogr_read(\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdf = gpd.read_file(PATH_BIKEMI_RAW, sep = ';')\n",
+    "gdf = gdf.rename(columns = {'id_amat':'id_stazione',\n",
+    "                           'stalli':'n_posti',\n",
+    "                           'LONG_X_4326':'longitudine',\n",
+    "                           'LAT_Y_4326': 'latitudine',\n",
+    "                           'Location':'location'})\n",
+    "gdf.drop(['stato', 'id_via', 'indirizzo', 'civico', 'zd_attuale', 'anno', \"tipo\"], axis=1, inplace=True)\n",
+    "gdf['icon'] = \"share\"\n",
+    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row['longitudine'], row['latitudine']), axis=1)\n",
+    "gdf = gdf.set_geometry(\"geometry\", crs=4326)\n",
+    "gdf = gdf.drop(columns=\"location\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c26b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf.to_file(PATH_BIKEMI_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b80e93a3",
    "metadata": {},
    "source": [
