--- a/Scripts/Rete_ciclabile_stradale.ipynb
+++ b/Scripts/Rete_ciclabile_stradale.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "76a32828",
    "metadata": {},
    "outputs": [],
@@ -24,9 +24,7 @@
     "import networkx as nx\n",
     "\n",
     "from my_paths import *\n",
-    "import Graph_functions\n",
-    "\n",
-    "from networkx.classes.reportviews import OutMultiEdgeView"
+    "import Graph_functions"
    ]
   },
   {
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "656286c9",
    "metadata": {},
    "outputs": [],
@@ -66,8 +64,8 @@
     "# Convertiamo alcuni tipi\n",
     "gdf_ciclabili_staging[\"geometry\"] = gdf_ciclabili_staging[\"geometry\"].apply(lambda x: x.geoms[0])\n",
     "gdf_ciclabili_staging[\"fine_lavor\"] = gdf_ciclabili_staging[\"fine_lavor\"].astype(int)\n",
-    "gdf_ciclabili_staging[\"lunghezza\"] = gdf_ciclabili_staging[\"lunghezza\"].astype(int)\n",
-    "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"id_via\",\"gerarchia\"], axis=1)\n",
+    "gdf_ciclabili_staging = gdf_ciclabili_staging.rename(columns={\"anagrafica\": \"name\", \"rete\": \"highway\"})\n",
+    "gdf_ciclabili_staging = gdf_ciclabili_staging.drop([\"id_amat\", \"id_via\",\"gerarchia\", \"lunghezza\"], axis=1)\n",
     "\n",
     "gdf_ciclabili_staging = gpd.GeoDataFrame(gdf_ciclabili_staging, geometry=\"geometry\")"
    ]
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bcdc9e4b",
    "metadata": {},
    "outputs": [],
@@ -105,12 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3241c61b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_edges = ox.graph_to_gdfs(G_ciclabili, edges=True, nodes=False)\n",
+    "gdf_edges = ox.graph_to_gdfs(G_ciclabili, edges=True, nodes=False).reset_index().drop([\"u\",\"v\", \"key\"], axis=1)\n",
     "gdf_edges.to_file(PATH_CICLABILI_GEOJSON_STAGING, driver=\"GeoJSON\") # Anche questo andrebbe ripulito\n",
     "with open(PATH_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_ciclabili, f)"
@@ -173,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "65d95026",
    "metadata": {},
    "outputs": [],
@@ -223,26 +221,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ae1289aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(PATH_STRADE_CICLABILI_PICKLE_RAW, \"rb\") as f:\n",
     "    G_strade = pickle.load(f)\n",
-    "\n",
-    "G_strade:nx.MultiDiGraph\n",
     "for u, v, k, data in G_strade.edges(data=True, keys=True):\n",
+    "    # Copio i data ed elimino tutto il dizionario.\n",
+    "    data = data.copy()\n",
+    "    G_strade[u][v][k].clear()\n",
     "    # Scelgo gli attributi da mantenere\n",
     "    G_strade[u][v][k]['length'] = data['length']\n",
     "    G_strade[u][v][k]['name'] = data.get('name', None)\n",
     "    G_strade[u][v][k]['highway'] = data[\"highway\"]\n",
-    "    G_strade[u][v][k]['weight'] = data['length'] * calcola_peso_strada(data[\"highway\"]) # Per ora\n",
+    "    weight_multipler = calcola_peso_strada(data[\"highway\"])\n",
+    "    G_strade[u][v][k][\"weight_multipler\"] = weight_multipler\n",
+    "    G_strade[u][v][k]['weight'] = data['length'] * weight_multipler # Per ora\n",
     "    G_strade[u][v][k][\"tipo\"] = \"Strade_ciclabili\"\n",
     "    G_strade[u][v][k][\"artificiale\"] = False\n",
+    "    # ------------ Da capire se tenere ----------------\n",
+    "    G_strade[u][v][k][\"maxspeed\"] = data.get(\"maxspeed\", None)\n",
+    "    G_strade[u][v][k][\"tunnel\"] = data.get(\"tunnel\", None)\n",
+    "    G_strade[u][v][k][\"access\"] = data.get(\"access\", None)\n",
+    "    G_strade[u][v][k][\"service\"] = data.get(\"service\", None)\n",
+    "    # ------------------------------------------------\n",
     "    G_strade[u][v][k][\"geometry\"] = data.get(\"geometry\", LineString([(G_strade.nodes[u][\"x\"], G_strade.nodes[u][\"y\"]),\n",
     "                                        (G_strade.nodes[v][\"x\"], G_strade.nodes[v][\"y\"])]))\n",
-    "\n",
+    "nx.set_node_attributes(G_strade, \"Strade_ciclabili\", \"tipo\")\n",
     "G_strade = G_strade.to_undirected()"
    ]
   },
@@ -256,12 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "832886fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_edges = ox.graph_to_gdfs(G_strade, edges=True, nodes=False)\n",
+    "gdf_edges = ox.graph_to_gdfs(G_strade, edges=True, nodes=False).reset_index().drop([\"u\", \"v\", \"key\"], axis=1)\n",
     "\n",
     "gdf_edges.to_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING, driver=\"GeoJSON\")\n",
     "\n",
@@ -289,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "05c4ae6e",
    "metadata": {},
    "outputs": [],
@@ -315,77 +322,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "5761f53c",
+   "execution_count": 5,
+   "id": "57579f46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_compose = nx.compose(G_strade, G_ciclabili)\n",
-    "G_compose_merged = Graph_functions.add_edge_near_nodes(G_compose,\n",
-    "                                                       weight_moltiplicator = 0,\n",
-    "                                                       tipo = \"Join_ciclabile_strade\",\n",
-    "                                                       artificiale=True)"
+    "G_compose = Graph_functions.connetti_due_grafi(G_strade, G_ciclabili, weight_moltiplicator=1,\n",
+    "                                                tipo = \"Join_ciclabile_strade\",\n",
+    "                                                artificiale=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "37cd9e16",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(PATH_RETE_CICLABILE_COMPLETA_PICKLE_CLEAN, \"wb\") as f:\n",
-    "    pickle.dump(G_strade, f)\n",
+    "    pickle.dump(G_compose, f)\n",
     "\n",
-    "gdf_compose = ox.graph_to_gdfs(G_compose_merged, edges=True, nodes=False)\n",
+    "gdf_compose = ox.graph_to_gdfs(G_compose, edges=True, nodes=False).reset_index().drop([\"u\",\"v\", \"key\"], axis=1)\n",
     "gdf_compose.to_file(PATH_RETE_CICLABILE_COMPLETA_GEOJSON_CLEAN, driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e74d02d0",
-   "metadata": {},
-   "source": [
-    "## Stazioni BikeMi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "336df9bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Matteo\\Coding\\Project\\Progetto-Bike\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver CSV does not support open option SEP\n",
-      "  return ogr_read(\n"
-     ]
-    }
-   ],
-   "source": [
-    "gdf = gpd.read_file(PATH_BIKEMI_RAW, sep = ';')\n",
-    "gdf = gdf.rename(columns = {'id_amat':'id_stazione',\n",
-    "                           'stalli':'n_posti',\n",
-    "                           'LONG_X_4326':'longitudine',\n",
-    "                           'LAT_Y_4326': 'latitudine',\n",
-    "                           'Location':'location'})\n",
-    "gdf.drop(['stato', 'id_via', 'indirizzo', 'civico', 'zd_attuale', 'anno', \"tipo\"], axis=1, inplace=True)\n",
-    "gdf['icon'] = \"share\"\n",
-    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row['longitudine'], row['latitudine']), axis=1)\n",
-    "gdf = gdf.set_geometry(\"geometry\", crs=4326)\n",
-    "gdf = gdf.drop(columns=\"location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "909ac5c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf.to_file(PATH_BIKEMI_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
