--- a/Scripts/analisi_cultura_spettacolo_nopesi.ipynb
+++ b/Scripts/analisi_cultura_spettacolo_nopesi.ipynb
@@ -3,66 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "910337f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: geopandas in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (1.1.1)\n",
-      "Requirement already satisfied: numpy>=1.24 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas) (2.3.1)\n",
-      "Requirement already satisfied: pyogrio>=0.7.2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas) (0.11.1)\n",
-      "Requirement already satisfied: packaging in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas) (25.0)\n",
-      "Requirement already satisfied: pandas>=2.0.0 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas) (2.3.1)\n",
-      "Requirement already satisfied: pyproj>=3.5.0 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas) (3.7.1)\n",
-      "Requirement already satisfied: shapely>=2.0.0 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas) (2.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from pandas>=2.0.0->geopandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from pandas>=2.0.0->geopandas) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from pandas>=2.0.0->geopandas) (2025.2)\n",
-      "Requirement already satisfied: certifi in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from pyogrio>=0.7.2->geopandas) (2025.8.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=2.0.0->geopandas) (1.17.0)\n",
-      "Requirement already satisfied: osmnx in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (2.0.5)\n",
-      "Requirement already satisfied: geopandas>=1.0.1 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from osmnx) (1.1.1)\n",
-      "Requirement already satisfied: networkx>=2.5 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from osmnx) (3.5)\n",
-      "Requirement already satisfied: numpy>=1.22 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from osmnx) (2.3.1)\n",
-      "Requirement already satisfied: pandas>=1.4 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from osmnx) (2.3.1)\n",
-      "Requirement already satisfied: requests>=2.27 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from osmnx) (2.32.4)\n",
-      "Requirement already satisfied: shapely>=2.0 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from osmnx) (2.1.1)\n",
-      "Requirement already satisfied: pyogrio>=0.7.2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas>=1.0.1->osmnx) (0.11.1)\n",
-      "Requirement already satisfied: packaging in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas>=1.0.1->osmnx) (25.0)\n",
-      "Requirement already satisfied: pyproj>=3.5.0 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from geopandas>=1.0.1->osmnx) (3.7.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from pandas>=1.4->osmnx) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from pandas>=1.4->osmnx) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from pandas>=1.4->osmnx) (2025.2)\n",
-      "Requirement already satisfied: certifi in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from pyogrio>=0.7.2->geopandas>=1.0.1->osmnx) (2025.8.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=1.4->osmnx) (1.17.0)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from requests>=2.27->osmnx) (3.4.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from requests>=2.27->osmnx) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from requests>=2.27->osmnx) (2.5.0)\n",
-      "Requirement already satisfied: scipy in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (1.16.1)\n",
-      "Requirement already satisfied: numpy<2.6,>=1.25.2 in c:\\users\\apera\\onedrive\\documenti\\progetti\\progetto_bike\\.venv\\lib\\site-packages (from scipy) (2.3.1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: unknown command \"installn\" - maybe you meant \"install\"\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install geopandas\n",
-    "!pip install osmnx\n",
-    "!pip install scipy\n",
-    "!pip installn networkx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "b9d327b4",
    "metadata": {},
    "outputs": [],
@@ -113,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9f48dc27",
    "metadata": {},
    "outputs": [],
@@ -125,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "adef3291",
    "metadata": {},
    "outputs": [],
@@ -143,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2a8db4c5",
    "metadata": {},
    "outputs": [],
@@ -173,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e1e5fefb",
    "metadata": {},
    "outputs": [],
@@ -195,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "03a25cca",
    "metadata": {},
    "outputs": [],
@@ -217,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4d2edf75",
    "metadata": {},
    "outputs": [],
@@ -239,13 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "dd91995a",
    "metadata": {},
    "outputs": [],
    "source": [
     "poi_nodes = [n for n, d in G_compose.nodes(data=True) if d.get(\"poi\") == True]\n",
-    "G_cultura_e_spettacollo = nx.MultiDiGraph(steiner_tree(G_compose, terminal_nodes=poi_nodes, weight='weight'))"
+    "G_cultura_e_spettacollo = nx.MultiDiGraph(steiner_tree(G_compose, terminal_nodes=poi_nodes, weight='weight')).to_undirected()"
    ]
   },
   {
@@ -258,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5ddf0850",
    "metadata": {},
    "outputs": [],
@@ -267,7 +207,7 @@
     "    pickle.dump(G_cultura_e_spettacollo, f)\n",
     "\n",
     "gdf_steiner = ox.graph_to_gdfs(G_cultura_e_spettacollo, edges=True, nodes=False)\n",
-    "gdf_steiner.to_file(\"../Data/Clean/Analisi/Cultura_e_spettacolo_nopesi.pickle\", driver=\"GeoJSON\")"
+    "gdf_steiner.to_file(\"../Data/Clean/Analisi/Cultura_e_spettacolo_nopesi.geojson\", driver=\"GeoJSON\")"
    ]
   }
  ],
@@ -287,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
