--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 95,
    "id": "b27ac11f",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 96,
    "id": "054f3bd0",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 97,
    "id": "413f2266",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 98,
    "id": "aa482998",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 99,
    "id": "236a1e6f",
    "metadata": {},
    "outputs": [],
@@ -170,13 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 100,
    "id": "4fc6c2e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "poi_nodes = [n for n, d in G_compose.nodes(data=True) if d.get(\"poi\") == True]\n",
-    "G_sport_tempo_libero = nx.MultiDiGraph(steiner_tree(G_compose, terminal_nodes=poi_nodes, weight='weight'))\n",
+    "G_sport_tempo_libero = nx.MultiDiGraph(steiner_tree(G_compose, terminal_nodes=poi_nodes, weight='weight')).to_undirected()\n",
     "# Sembra ridontante castare a MultiDiGraph il risultato di steiner_tree() che è comunque un MultiDiGraph\n",
     "# ma per vari motivi non si riesce poi a salvare in pickle e quindi meglio \"rifare\" una copia profonda in uno nuovo"
    ]
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 101,
    "id": "b5b49bec",
    "metadata": {},
    "outputs": [],
