add "auto_analysis" e primi test

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "import json\n",
     "\n",
     "import geopandas as gpd\n",
     "import networkx as nx\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "id": "b27ac11f",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "id": "054f3bd0",
    "metadata": {},
    "outputs": [],
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 105,
    "id": "413f2266",
    "metadata": {},
    "outputs": [],
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "id": "aa482998",
    "metadata": {},
    "outputs": [],
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 107,
    "id": "236a1e6f",
    "metadata": {},
    "outputs": [],
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "id": "4fc6c2e1",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "id": "b5b49bec",
    "metadata": {},
    "outputs": [],
@@ -199,8 +200,113 @@
     "with open(PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_sport_tempo_libero, f)\n",
     "\n",
-    "gdf_steiner = ox.graph_to_gdfs(G_sport_tempo_libero, edges=True, nodes=False)\n",
+    "gdf_steiner = ox.graph_to_gdfs(G_sport_tempo_libero, edges=True, nodes=False).reset_index(drop=True)\n",
     "gdf_steiner.to_file(PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96bd4170",
+   "metadata": {},
+   "source": [
+    "## Analisi Automatica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cfdf378",
+   "metadata": {},
+   "source": [
+    "Tramite la funzione Graph_functions.auto_analysis_poi() è possibile eseguire in automatico la ricreazione del grafo stradale con il dizionario dei pesi desiderato.\n",
+    "Si può ora caricaricare da file il dizionario dei pesi che abbiamo pre-stabilito.\n",
+    "Aggiunta possibilità di inserire come chiave \"default\" nel \"custom_weights\" in modo da dare un valore di base quando non viene trovata una strada. Grazie a questo è possibile utilizzare un dizionario del tipo:\n",
+    "```python\n",
+    "{\"default\": 1}\n",
+    "```\n",
+    "In questo modo a tutte le strade verrà assegnato il peso = 1.\n",
+    "Si possono inserire i vari percorsi di salvataggio dei file pickle (grafo) e geojson(geoDataFrame).\n",
+    "Richiede una struttura a liste di dizionari di geoDataFrame per \"poi\" del tipo:\n",
+    "```python\n",
+    "gdf_list = [\n",
+    "    {\"gdf\":  gpd.read_file(PATH_DEL_GEOJSON),\n",
+    "     \"tipo\": \"tipo che si vuole assegnare agli archi che connettono il gdf al grafo\",\n",
+    "     \"attr\": {\"nome_attributo\": \"valore_attributo\"} # Opzionale, di solito non ci serve\n",
+    "     }\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c774a8e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PATH_CUSTOM_WEIGHTS_STRADE_RAW, 'r') as f:\n",
+    "    custom_weights = json.load(f)\n",
+    "gdf_list = [\n",
+    "    {\"gdf\":  gpd.read_file(PATH_PARCHI_CLEAN),\n",
+    "     \"tipo\": \"parchi\",},\n",
+    "    {\"gdf\":  gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN),\n",
+    "     \"tipo\": \"impianti sportivi\",},\n",
+    "    {\"gdf\":  gpd.read_file(PATH_AREE_GIOCO_CLEAN),\n",
+    "     \"tipo\": \"aree gioco\",}\n",
+    "]\n",
+    "\n",
+    "Graph_functions.auto_analysis_poi(gdf_list, custom_weights,\n",
+    "                                  PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN,\n",
+    "                                  PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1c8e634",
+   "metadata": {},
+   "source": [
+    "### Esempio di statisiche per confrontare 2 grafi: uno con i nostri pesi e l'altro fatto girare con pesi = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9d1ce163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_pesi = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)\n",
+    "gdf_no_pesi = gpd.read_file(\"../Data/Clean/Analisi/sport_tempo_libero_clean_nopesi.geojson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "88d01772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_pesi_mod = gdf_pesi[gdf_pesi[\"artificiale\"] != \"True\"]\n",
+    "gdf_no_pesi_mod = gdf_no_pesi[gdf_no_pesi[\"artificiale\"] != \"True\"]\n",
+    "\n",
+    "gdf_pesi_mod_most_highways = gdf_pesi_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "    \"geometry\": lambda x: sum(x.length/1000)\n",
+    "}).sort_values(by=\"geometry\", ascending=False)[:5]\n",
+    "gdf_no_pesi_mod_most_highways = gdf_no_pesi_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
+    "    \"geometry\": lambda x: sum(x.length/1000)\n",
+    "}).sort_values(by=\"geometry\", ascending=False)[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d0bf844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"----------PESI-------------\")\n",
+    "print(gdf_pesi_mod_most_highways)\n",
+    "print(\"----------NO PESI----------\")\n",
+    "print(gdf_no_pesi_mod_most_highways)"
    ]
   }
  ],
