--- a/Scripts/Rete_ciclabile_stradale.ipynb
+++ b/Scripts/Rete_ciclabile_stradale.ipynb
@@ -171,49 +171,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "65d95026",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcola_peso_strada(highway) -> float:\n",
-    "    custom_weights = {\n",
-    "        \"motorway\": 99,\n",
-    "        \"trunk\": 99,\n",
-    "        \"primary\": 1.2,\n",
-    "        \"secondary\": 1.1,\n",
-    "        \"tertiary\": 1.25,\n",
-    "        \"residential\": 1.3,\n",
-    "        \"unclassified\": 1.3,\n",
-    "        \"living_street\": 1.3,\n",
-    "        \"motorway_link\": 99,\n",
-    "        \"trunk_link\": 99,\n",
-    "        \"primary_link\": 1.2,\n",
-    "        \"secondary_link\": 1.1,\n",
-    "        \"tertiary_link\": 1.25,\n",
-    "        \"service\": 99,\n",
-    "        \"footway\": 1.2,\n",
-    "        \"pedestrian\": 1.5,\n",
-    "        \"steps\": 99,\n",
-    "        \"platform\": 99,\n",
-    "        \"path\": 1.1,\n",
-    "        \"cycleway\": 1,\n",
-    "        \"track\": 1,\n",
-    "        \"bridleway\": 1.6,\n",
-    "        \"construction\": 99,\n",
-    "        \"proposed\": 99,\n",
-    "        \"demolished\": 99,\n",
-    "        \"busway\": 99,\n",
-    "        \"bus_stop\": 99,\n",
-    "        \"corridor\": 99,\n",
-    "        \"services\": 99,\n",
-    "        \"emergency_bay\": 99\n",
-    "    }\n",
+    "def calcola_peso_strada(highway, custom_weights:dict) -> float:\n",
+    "    \"\"\"\n",
+    "    Data una strada \"highway\" restituisce il calcolo del moltiplicatore di peso da inserire.\n",
+    "    Se in \"custom_weights\" viene inserita una chiave \"default\", in caso non venga trovata\n",
+    "    la strada richiesta verrà inserito quel valore. Se \"default\" non è inserito verrà usato\n",
+    "    \"99\", che rappresenta il peso massimo assegnabile ad una strada.\n",
+    "    \"\"\"\n",
     "    if isinstance(highway, str):\n",
     "        highway = [highway]\n",
     "    max_weight = 99\n",
     "    for h in highway:\n",
-    "        new_weight = custom_weights.get(h, 99)\n",
+    "        new_weight = custom_weights.get(h, custom_weights.get(\"default\", 99))\n",
     "        if new_weight < max_weight:\n",
     "            max_weight = new_weight\n",
     "    return max_weight"
@@ -221,13 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ae1289aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(PATH_STRADE_CICLABILI_PICKLE_RAW, \"rb\") as f:\n",
     "    G_strade = pickle.load(f)\n",
+    "with open(PATH_CUSTOM_WEIGHTS_STRADE_RAW, 'r') as f:\n",
+    "    custom_weights = json.load(f)\n",
+    "\n",
     "for u, v, k, data in G_strade.edges(data=True, keys=True):\n",
     "    # Copio i data ed elimino tutto il dizionario.\n",
     "    data = data.copy()\n",
@@ -236,7 +213,7 @@
     "    G_strade[u][v][k]['length'] = data['length']\n",
     "    G_strade[u][v][k]['name'] = data.get('name', None)\n",
     "    G_strade[u][v][k]['highway'] = data[\"highway\"]\n",
-    "    weight_multipler = calcola_peso_strada(data[\"highway\"])\n",
+    "    weight_multipler = calcola_peso_strada(data[\"highway\"], custom_weights)\n",
     "    G_strade[u][v][k][\"weight_multipler\"] = weight_multipler\n",
     "    G_strade[u][v][k]['weight'] = data['length'] * weight_multipler # Per ora\n",
     "    G_strade[u][v][k][\"tipo\"] = \"Strade_ciclabili\"\n",
